profile photo updated

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             </ul>
         </section>
         <section class="stats-section">
+            <h2>GitLab Stats</h2>
+            <img src="https://gitlab.com/users/shashikumarkl/contributions" alt="GitLab Stats">
+
             <h2>GitHub Stats</h2>
             <img src="https://github-readme-stats.vercel.app/api?username=shashikumarkl&show_icons=true&hide_title=true" alt="Your GitHub Stats">
             <!-- HackerRank Badge -->
