--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <section class="about-section">
             <div class="profile-picture">
-                <img src="profile.png" alt="Profile Picture">
+                <img src="profile.jpeg" alt="Profile Picture">
             </div>
             <div class="about-content">
                 <h2>Hello, I'm Shashikumar K L!</h2>
